# JanOS

./: .gitignore  CMakeLists.txt  README.md  assetManager.go  assets.go  buffer.go  config.json  core.go  credits  dimension.go  ecs.go  exec_createControlStructure.cu  exec_loopingIncrementer.cu  exec_observe.cu  exec_pulseGeneration.cu  exec_readOneMeasure.cu  exec_setPace.cu  exec_shutdown.cu  exec_startup.cu  exec_togglePrimaryBit.cu  exec_writeOnBeat.cu  formula.go  go.mod  go.sum  go.work  go.work.sum  interfaces.go  janos.cu  janos.cuh  license  logManager.go  logging.go  main.cu  main.go  main2.cu  operatingSystem.go  oscillator.go  perceptionBuffer.go  readme.md  sampling.go  (+11 more)
Arwen/: dimension.go  driving.go  go.mod  oscillator.go  sampling.go  waveform.go
Formula/: formulae.go
Ganglia/: Ganglia  Ganglia.go  config.json  go.mod  go.work  main.go
Guestbook/: config.json  go.mod  go.sum  go.work  main.go
Heart/: config.json  go.mod  main.go
Heartbeat/: config.json  go.mod  main.go  observer.go
Logic/: analysis.go  assets.go  components.go  concurrency.go  core.go  dimension.go  driving.go  ecs.go  game.go  go.mod  graphOscillator.go  nexus.go  oscillator.go  sampling.go  universe.go  util.go
Neuron/: go.mod  go.work  main.go  observer.go
Observers/: integral.go  logging.go  observer.go  printing.go  threshold.go
Old/: makefile
Output/: config.json  heartbeat.exe~  neuron.exe~
Spark/: assets.go  components.go  cursoring.go  ecs.go  game.go  go.mod  nexus.go  oscillation.go  spark.go  waveformVisualizer.go
Symbol/: symbol.go
Symbols/: symbol.go
analysis/: time.go  waveform.go  world.go
arwen/: go.mod  go.sum
clean/: clean.go  go.mod
cmd/: main.go
common/: broker.go  go.mod  matchmaker.go  node.go  observer.go  (+2 more)
(+655 files in other folders)
